Fix homepage tiles + wedding app waitlist
Homepage:
- Removed inline 3-column override on services grid
- Added 600px breakpoint for single column on mobile

Wedding App:
- Replaced full app with waitlist/signup page
- Collects: name, email, role (planner/venue/vendor/couple)
- Stores signups in localStorage (API integration later)
- Links back to landing page for more info

--- a/index.html
+++ b/index.html
@@ -2827,6 +2827,12 @@
             .why-grid {
                 grid-template-columns: 1fr 1fr;
             }
+        }
+
+        @media (max-width: 600px) {
+            .more-services-grid {
+                grid-template-columns: 1fr;
+            }
 
             .demo-container {
                 grid-template-columns: 1fr;
@@ -3980,7 +3986,7 @@
                 <p class="section-subtitle">AI integrations, cloud infrastructure, custom development, and ongoing support — your complete technology partner.</p>
             </div>
 
-            <div class="more-services-grid" style="grid-template-columns: repeat(3, 1fr);">
+            <div class="more-services-grid">
                 <a href="service-agent-discovery.html" class="mini-service popular reveal" style="text-decoration: none; color: inherit;">
                     <h4>🎯 Agent Discovery & Strategy</h4>
                     <p>We audit your workflows and identify exactly where AI can save you time. You'll get a concrete plan with ROI estimates — no jargon, no fluff.</p>
