Fix service tiles: force single column at 900px

--- a/index.html
+++ b/index.html
@@ -2829,9 +2829,9 @@
             }
         }
 
-        @media (max-width: 600px) {
+        @media (max-width: 900px) {
             .more-services-grid {
-                grid-template-columns: 1fr;
+                grid-template-columns: 1fr !important;
             }
 
             .demo-container {
