Fix RI report charts on mobile
- Set min-height on chart canvases (220px+)
- Changed container height from fixed to auto
- Added min-height to specific chart IDs

--- a/ri-report.html
+++ b/ri-report.html
@@ -257,6 +257,11 @@
  .hero .subtitle { font-size: 0.85rem !important; margin-top: 0.25rem !important; }
  .sql-section { padding: 1rem; border-radius: 12px; }
  .filters { flex-direction: column; align-items: stretch; }
+ /* Fix chart heights on mobile */
+ .chart-card { min-height: auto !important; }
+ .chart-card canvas { min-height: 220px !important; height: auto !important; }
+ #trendChart, #cityStackedChart, #insightChart { min-height: 250px !important; }
+ .chart-grid { gap: 1rem; }
  .filter-group { width: 100%; }
  .more-filters-btn { display: block; width: 100%; padding: 0.75rem; margin: 0.5rem 0; background: rgba(99,102,241,0.2); border: 1px dashed rgba(99,102,241,0.4); border-radius: 8px; color: #6366f1; font-size: 0.85rem; cursor: pointer; }
  .more-filters-btn.active { background: rgba(99,102,241,0.3); }
@@ -755,11 +760,11 @@
  <div class="chart-grid">
  <div class="chart-card full">
  <div class="chart-title">Monthly Sales Volume & Average Price (24 Months)</div>
- <div style="position:relative;height:200px"><canvas id="trendChart"></canvas></div>
+ <div style="position:relative;min-height:200px;height:auto"><canvas id="trendChart" style="min-height:200px"></canvas></div>
  </div>
  <div class="chart-card full">
  <div class="chart-title">Sales by City & Property Type (Top 12)</div>
- <div style="position:relative;height:350px"><canvas id="cityStackedChart"></canvas></div>
+ <div style="position:relative;min-height:300px;height:auto"><canvas id="cityStackedChart" style="min-height:300px"></canvas></div>
  </div>
  </div>
 
