Add RI AI Task Force blog post
- Breakdown of Executive Order 24-06
- AI Task Force, Centers of Excellence explained
- What it means for small businesses
- Links to Innovation Voucher, Real Jobs RI
- Added to homepage blog scroll

--- a/index.html
+++ b/index.html
@@ -4368,6 +4368,13 @@
                     <a href="blog.html">AIBridges Research →</a>
                 </div>
 
+                <!-- Card 0 - RI AI Task Force -->
+                <a href="blog-ri-ai-task-force" class="scroll-card">
+                    <div class="card-type"><span>Article</span> on Feb 16, 2026</div>
+                    <h3>RI AI Task Force: What Small Businesses Need to Know</h3>
+                    <div class="card-tag">Policy</div>
+                </a>
+
                 <!-- Card 1 - MA Settlements -->
                 <a href="blog-ma-car-accident-settlements-2026" class="scroll-card">
                     <div class="card-type"><span>Article</span> on Feb 7, 2026</div>
