Kill vendor backup network - focus on coordination
Removed:
- Day-Of Emergency AI (backup vendor contacts)
- Emergency AI backup from pricing

Added instead:
- Day-Of Dashboard (real-time vendor status)
- Live coordination feature

Market feedback: vendors rarely no-show, venues already have backup lists. The real pain is coordination, not emergencies.

--- a/newport-weddings-ai.html
+++ b/newport-weddings-ai.html
@@ -674,11 +674,11 @@
                     </div>
                 </div>
                 <div class="solution-card">
-                    <div class="solution-icon">🚨</div>
+                    <div class="solution-icon">📊</div>
                     <div class="solution-content">
-                        <h3>Day-Of Emergency AI</h3>
-                        <p>Vendor no-show? Weather change? AI has backup vendor contacts and suggests indoor alternatives. Timeline slipping? Auto-recalculates and notifies everyone.</p>
-                        <span class="solution-stat">Peace of mind</span>
+                        <h3>Day-Of Dashboard</h3>
+                        <p>Real-time status board shows where every vendor is. Caterer arrived? ✅ Photographer running late? 🔔 Everyone stays in sync without group text chaos.</p>
+                        <span class="solution-stat">Live coordination</span>
                     </div>
                 </div>
             </div>
@@ -725,7 +725,7 @@
                         <li><i class="fas fa-check"></i> Vendor coordination hub</li>
                         <li><i class="fas fa-check"></i> Timeline generator</li>
                         <li><i class="fas fa-check"></i> Guest FAQ bot</li>
-                        <li><i class="fas fa-check"></i> Emergency AI backup</li>
+                        <li><i class="fas fa-check"></i> Day-of status dashboard</li>
                         <li><i class="fas fa-check"></i> Priority support</li>
                     </ul>
                     <a href="/#contact" class="btn btn-primary" style="width: 100%;">Start Free Trial</a>
