--- a/wedding-app.html
+++ b/wedding-app.html
@@ -284,9 +284,9 @@
                 <p>24/7 answers for guests</p>
             </div>
             <div class="feature">
-                <div class="feature-icon">🚨</div>
-                <h3>Day-Of Alerts</h3>
-                <p>Emergency backup plans</p>
+                <div class="feature-icon">📊</div>
+                <h3>Live Dashboard</h3>
+                <p>Real-time vendor status</p>
             </div>
         </div>
         
