Add Realtors AI to nav dropdown + mobile menu
- Tools dropdown: added 🤖 Realtors AI link
- Mobile menu: added Realtors AI between RI Real Estate and Wedding AI

--- a/index.html
+++ b/index.html
@@ -3852,6 +3852,7 @@
         <a href="#services" data-mobile-link>Services</a>
         <a href="products.html" data-mobile-link>Products</a>
         <a href="ri-report" data-mobile-link>RI Real Estate</a>
+        <a href="realtors-ai" data-mobile-link>Realtors AI</a>
         <a href="wedding-app" data-mobile-link>Wedding AI</a>
         <a href="#demo" data-mobile-link>AI Demo</a>
         <a href="blog.html" data-mobile-link>Blog</a>
@@ -3879,6 +3880,7 @@
                     <a href="#" data-nav>Tools</a>
                     <div class="dropdown-menu">
                         <a href="/ri-report.html">🏠 RI Real Estate</a>
+                        <a href="/realtors-ai">🤖 Realtors AI</a>
                         <a href="/youtube-trends">📊 YouTube Trends</a>
                         <a href="/kb.html">📚 Knowledge Base</a>
                     </div>
