--- a/realtors-ai.html
+++ b/realtors-ai.html
@@ -96,6 +96,12 @@
             width: 100%;
             height: 400px;
             --poster-color: transparent;
+            animation: float 3s ease-in-out infinite;
+        }
+        
+        @keyframes float {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-15px); }
         }
         
         .badge {
@@ -542,17 +548,26 @@
             </div>
             <div class="hero-model">
                 <model-viewer
+                    id="robot"
                     src="robot-realtor.glb"
                     alt="AI Realtor Assistant Robot"
-                    auto-rotate
-                    rotation-per-second="30deg"
-                    camera-controls
-                    disable-zoom
                     interaction-prompt="none"
                     environment-image="neutral"
                     shadow-intensity="1"
                     exposure="1.2"
+                    camera-orbit="0deg 75deg 2.5m"
                 ></model-viewer>
+                <script>
+                    const robot = document.getElementById('robot');
+                    let angle = 0;
+                    function swayRobot() {
+                        angle += 0.02;
+                        const rotation = Math.sin(angle) * 20; // sway ±20 degrees
+                        robot.setAttribute('camera-orbit', `${rotation}deg 75deg 2.5m`);
+                        requestAnimationFrame(swayRobot);
+                    }
+                    robot.addEventListener('load', swayRobot);
+                </script>
             </div>
         </div>
     </section>
