Robot: zoom out to 4m, slower gentler sway

--- a/realtors-ai.html
+++ b/realtors-ai.html
@@ -627,15 +627,15 @@
                     environment-image="neutral"
                     shadow-intensity="1"
                     exposure="1.2"
-                    camera-orbit="0deg 75deg 2.5m"
+                    camera-orbit="0deg 80deg 4m"
                 ></model-viewer>
                 <script>
                     const robot = document.getElementById('robot');
                     let angle = 0;
                     function swayRobot() {
-                        angle += 0.02;
-                        const rotation = Math.sin(angle) * 20; // sway ±20 degrees
-                        robot.setAttribute('camera-orbit', `${rotation}deg 75deg 2.5m`);
+                        angle += 0.008; // slower sway
+                        const rotation = Math.sin(angle) * 15; // sway ±15 degrees
+                        robot.setAttribute('camera-orbit', `${rotation}deg 80deg 4m`);
                         requestAnimationFrame(swayRobot);
                     }
                     robot.addEventListener('load', swayRobot);
