--- a/realtors-ai.html
+++ b/realtors-ai.html
@@ -95,7 +95,7 @@
         
         model-viewer {
             width: 100%;
-            height: 450px;
+            height: 500px;
             --poster-color: transparent;
             animation: float 3s ease-in-out infinite;
         }
@@ -152,7 +152,7 @@
         
         .gradient-text {
             font-weight: 700;
-            vertical-align: baseline;
+            color: var(--cyan);
             background: linear-gradient(90deg, var(--cyan), var(--primary), var(--cyan));
             background-size: 200% auto;
             -webkit-background-clip: text;
@@ -610,16 +610,19 @@
                     environment-image="neutral"
                     shadow-intensity="1"
                     exposure="1.2"
-                    camera-orbit="0deg 90deg 1.8m"
-                    field-of-view="30deg"
+                    camera-orbit="0deg 75deg 2.2m"
+                    camera-target="0m 0.3m 0m"
+                    field-of-view="25deg"
+                    min-camera-orbit="auto auto auto"
+                    max-camera-orbit="auto auto auto"
                 ></model-viewer>
                 <script>
                     const robot = document.getElementById('robot');
                     let angle = 0;
                     function swayRobot() {
-                        angle += 0.008;
-                        const rotation = Math.sin(angle) * 12;
-                        robot.setAttribute('camera-orbit', `${rotation}deg 90deg 1.8m`);
+                        angle += 0.006;
+                        const rotation = Math.sin(angle) * 10;
+                        robot.setAttribute('camera-orbit', `${rotation}deg 75deg 2.2m`);
                         requestAnimationFrame(swayRobot);
                     }
                     robot.addEventListener('load', swayRobot);
