Robot: CSS scale(0.7) + 105% orbit distance + 45deg FOV

--- a/realtors-ai.html
+++ b/realtors-ai.html
@@ -95,9 +95,11 @@
         
         model-viewer {
             width: 100%;
-            height: 500px;
+            height: 600px;
             --poster-color: transparent;
             animation: float 3s ease-in-out infinite;
+            transform: scale(0.7);
+            transform-origin: center center;
         }
         
         @keyframes float {
@@ -610,9 +612,9 @@
                     environment-image="neutral"
                     shadow-intensity="1"
                     exposure="1.2"
-                    camera-orbit="0deg 75deg 3.5m"
-                    camera-target="0m 0.2m 0m"
-                    field-of-view="20deg"
+                    camera-orbit="0deg 80deg 105%"
+                    camera-target="0m 0m 0m"
+                    field-of-view="45deg"
                     min-camera-orbit="auto auto auto"
                     max-camera-orbit="auto auto auto"
                 ></model-viewer>
@@ -622,7 +624,7 @@
                     function swayRobot() {
                         angle += 0.006;
                         const rotation = Math.sin(angle) * 10;
-                        robot.setAttribute('camera-orbit', `${rotation}deg 75deg 3.5m`);
+                        robot.setAttribute('camera-orbit', `${rotation}deg 80deg 105%`);
                         requestAnimationFrame(swayRobot);
                     }
                     robot.addEventListener('load', swayRobot);
