Add favicon to all HTML pages (105 files)

--- a/blog-ai-agents-consciousness-moltbook.html
+++ b/blog-ai-agents-consciousness-moltbook.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>When AI Agents Start Talking to Each Other: The Rise of Moltbook and Agent Consciousness | AIBridges</title>
     <meta name="description" content="AI agents now have their own social network. Moltbook.com lets autonomous AI systems post, vote, and discuss - without humans. What happens when they start forming opinions?">
