--- a/blog-disk-space-onedrive-troubleshooting.html
+++ b/blog-disk-space-onedrive-troubleshooting.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disk Space & OneDrive Troubleshooting: PowerShell Commands That Actually Work | AIBridges</title>
     <meta name="description" content="Running out of disk space? OneDrive sync issues? Get the exact PowerShell commands IT pros use to diagnose and fix Windows storage problems. Free guide with copy-paste scripts.">
