--- a/swiftshot.html
+++ b/swiftshot.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SwiftShot - Court-Ready Evidence Capture & Preservation | AIBridges</title>
     <meta name="description" content="Capture, annotate, and preserve web evidence with tamper-proof WORM storage. SHA-256 hash verification, chain of custody, AES-256 encryption. Built for litigation.">
