--- a/blog-ct-car-accident-settlements-2026.html
+++ b/blog-ct-car-accident-settlements-2026.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Average Car Accident Settlement in Connecticut 2026 | AIBridges</title>
     <meta name="description" content="Data from 136 real Connecticut car accident settlements reveals what your case may be worth. See median values, ranges by injury type, and CT-specific factors.">
