--- a/blog-ma-car-accident-settlements-2026.html
+++ b/blog-ma-car-accident-settlements-2026.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Average Car Accident Settlement in Massachusetts 2026 | AIBridges</title>
     <meta name="description" content="What 118 real Massachusetts car accident settlements reveal about case values. See median settlements, ranges by injury type, and factors that increase your case value.">
