--- a/blog-ri-ai-task-force.html
+++ b/blog-ri-ai-task-force.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rhode Island AI Task Force: What Small Businesses Need to Know | AIBridges</title>
     <meta name="description" content="Governor McKee's Executive Order 24-06 establishes an AI Task Force and Centers of Excellence. Here's what it means for Rhode Island businesses.">
