--- a/blog-ri-innovation-voucher-ai.html
+++ b/blog-ri-innovation-voucher-ai.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How to Get Rhode Island to Pay for Your AI Implementation | AIBridges</title>
     <meta name="description" content="Rhode Island's Innovation Voucher program funds AI and R&D projects for small businesses. Learn how to apply and get up to $50K for your AI implementation.">
