--- a/blog-shift-trading-restaurant-staff.html
+++ b/blog-shift-trading-restaurant-staff.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How Shift Trading Reduces No-Shows and Keeps Your Restaurant Fully Staffed | AIBridges</title>
     <meta name="description" content="Learn how enabling shift trading with manager approval can reduce no-shows by up to 70% and keep your restaurant running smoothly. Free tools and best practices.">
