--- a/blog-small-business-ai-guide.html
+++ b/blog-small-business-ai-guide.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI for Small Business: A Practical Guide to Getting Started | AIBridges</title>
     <meta name="description" content="Cut through the AI hype. Learn which AI tools actually help small businesses, what they cost, and how to implement them without an IT department.">
