--- a/blog-staffsync-free-restaurant-scheduler.html
+++ b/blog-staffsync-free-restaurant-scheduler.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StaffSync: Free Restaurant Staff Scheduling That Actually Works | AIBridges</title>
     <meta name="description" content="Introducing StaffSync - a completely free restaurant scheduling app with shift swapping, manager approvals, and real-time updates. No credit card required.">
