--- a/newport-ri.html
+++ b/newport-ri.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI & IT Services Newport RI | AIBridges - Local Tech Solutions</title>
     <meta name="description" content="AIBridges provides professional AI consulting, IT support, and custom software development in Newport, Rhode Island. Local team, same-day support. Call (401) 327-2971.">
