--- a/providence-law-firms-ai.html
+++ b/providence-law-firms-ai.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI for Providence Law Firms | Document Automation & Legal Tech | AIBridges</title>
     <meta name="description" content="AI solutions for Providence law firms. Document automation, legal research, client intake, and private AI deployment. Serving firms near the RI Superior Court and Federal Building.">
