--- a/state-of-ai-rhode-island-2026.html
+++ b/state-of-ai-rhode-island-2026.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>State of AI in Rhode Island 2026 | AIBridges Report</title>
     <meta name="description" content="2026 benchmarks for AI adoption by Rhode Island businesses. Industry data on AI tools, projected spending, ROI expectations, and implementation patterns.">
