Fix: See the Data button links to /ri-report

--- a/realtors-ai.html
+++ b/realtors-ai.html
@@ -744,7 +744,7 @@
                 </script>
                 <div class="cta-group">
                     <a href="#pricing" class="btn btn-primary">See Pricing</a>
-                    <a href="#demo" class="btn btn-secondary">See the Data</a>
+                    <a href="/ri-report" class="btn btn-secondary">See the Data</a>
                 </div>
             </div>
             <div class="hero-model">
