Fix: add preview images, fix image path

--- a/realtors-ai.html
+++ b/realtors-ai.html
@@ -1086,7 +1086,7 @@
             <p>Your AI has instant access to our comprehensive Rhode Island property database.</p>
             <div class="demo-preview">
                 <a href="/ri-report">
-                    <img src="real-estate/preview-1.png" alt="RI Real Estate Data Dashboard">
+                    <img src="/real-estate/preview-1.png" alt="RI Real Estate Data Dashboard">
                 </a>
             </div>
         </div>
