Fix truncated patch title + improve title wrapping CSS

--- a/ouroboros/evolution-log.html
+++ b/ouroboros/evolution-log.html
@@ -79,6 +79,9 @@
       font-size: 0.9rem;
       margin-bottom: 0.5rem;
       word-wrap: break-word;
+      overflow-wrap: break-word;
+      white-space: normal;
+      line-height: 1.4;
     }
     .patch-meta {
       display: flex;
@@ -254,7 +257,7 @@ function generateEmbeddings(inputData) {
     <div class="patch-card pending-card">
       <div class="patch-header" onclick="toggleCode('pending-2')">
         <div class="patch-left">
-          <div class="patch-title"><span class="toggle-icon" id="icon-pending-2">▶</span> 💭 [Belief] Add mechanisms to integrate global contextual information and maintain persisten</div>
+          <div class="patch-title"><span class="toggle-icon" id="icon-pending-2">▶</span> 💭 [Belief] Add mechanisms to integrate global contextual information and maintain persistent memory</div>
           <div class="patch-meta">
             <span class="patch-hash">#8whh</span>
             <span class="patch-ant">🐜 synthesis</span>
