Add timestamps to patches for cron log verification

--- a/ouroboros/evolution-log.html
+++ b/ouroboros/evolution-log.html
@@ -106,6 +106,14 @@
       padding: 0.2rem 0.4rem;
       border-radius: 4px;
     }
+    .patch-time {
+      font-family: monospace;
+      font-size: 0.65rem;
+      color: var(--muted);
+      background: rgba(148, 163, 184, 0.15);
+      padding: 0.2rem 0.4rem;
+      border-radius: 4px;
+    }
     .patch-file {
       font-family: monospace;
       font-size: 0.65rem;
@@ -195,6 +203,7 @@
           <div class="patch-title"><span class="toggle-icon" id="icon-pending-0">▶</span> 🎛️ Auto-tune: Similarity threshold for connections</div>
           <div class="patch-meta">
             <span class="patch-hash">#g5if</span>
+            <span class="patch-time">2026-02-16 18:35 UTC</span>
             <span class="patch-ant">🐜 implementer</span>
             <span class="patch-file">config.js</span>
           </div>
@@ -211,6 +220,7 @@
           <div class="patch-title"><span class="toggle-icon" id="icon-pending-1">▶</span> 💭 [Belief] Implement a GAN-based architecture to learn more robust feature representations </div>
           <div class="patch-meta">
             <span class="patch-hash">#tgjb</span>
+            <span class="patch-time">2026-02-12 17:13 UTC</span>
             <span class="patch-ant">🐜 synthesis</span>
             <span class="patch-file">src/core/embeddings.js</span>
           </div>
@@ -260,6 +270,7 @@ function generateEmbeddings(inputData) {
           <div class="patch-title"><span class="toggle-icon" id="icon-pending-2">▶</span> 💭 [Belief] Add mechanisms to integrate global contextual information and maintain persistent memory</div>
           <div class="patch-meta">
             <span class="patch-hash">#8whh</span>
+            <span class="patch-time">2026-02-12 20:17 UTC</span>
             <span class="patch-ant">🐜 synthesis</span>
             <span class="patch-file">src/ants/implementer-ant.js</span>
           </div>
@@ -297,6 +308,7 @@ function implementPatch() {
         <div class="patch-title"><span class="toggle-icon" id="icon-applied-0">▶</span> 🧠 [DEEP] Implement selective decay of pheromones based on</div>
         <div class="patch-meta">
           <span class="patch-hash">#fkr5</span>
+          <span class="patch-time">2026-02-15 15:00 UTC</span>
           <span class="patch-ant">🐜 deep-reader</span>
           <span class="patch-file">core/pheromones-db.js</span>
         </div>
@@ -317,6 +329,7 @@ function implementPatch() {
         <div class="patch-title"><span class="toggle-icon" id="icon-applied-1">▶</span> 🧠 [DEEP] Implement selective gating based on Paper 2's Mi</div>
         <div class="patch-meta">
           <span class="patch-hash">#melz</span>
+          <span class="patch-time">2026-02-15 03:00 UTC</span>
           <span class="patch-ant">🐜 deep-reader</span>
           <span class="patch-file">core/pheromones-db.js</span>
         </div>
@@ -345,6 +358,7 @@ function computeGateScore(novelty) {
         <div class="patch-title"><span class="toggle-icon" id="icon-applied-2">▶</span> 💭 [Belief] Integrate Knowledge Graphs into the existing S</div>
         <div class="patch-meta">
           <span class="patch-hash">#35wl</span>
+          <span class="patch-time">2026-02-15 03:00 UTC</span>
           <span class="patch-ant">🐜 synthesis</span>
           <span class="patch-file">src/ants/synthesis-ant.js</span>
         </div>
