--- a/index.html
+++ b/index.html
@@ -3737,7 +3737,7 @@
             "provider": { "@type": "Organization", "name": "AIBridges" },
             "areaServed": { "@type": "State", "name": "Rhode Island" },
             "description": "Build your AI agent fleet — task runners, document processors, and automation pipelines.",
-            "offers": { "@type": "Offer", "price": "2500", "priceCurrency": "USD" }
+            "offers": { "@type": "Offer", "price": "400", "priceCurrency": "USD" }
         },
         {
             "@context": "https://schema.org",
@@ -3794,7 +3794,7 @@
                 "name": "How much does AI integration cost for a small business?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text": "Our discovery call is free. Simple AI assistants start at $400. Custom enterprise deployments from $2,500. Managed service starts at $99/month with usage caps so costs stay predictable."
+                    "text": "Our discovery call is free. AI agents start at $400. Managed service starts at $99/month with usage caps so costs stay predictable."
                 }
             },
             {
@@ -4008,7 +4008,7 @@
                         <li>Integration with your existing tools</li>
                         <li>Testing & deployment</li>
                     </ul>
-                    <span class="price">From $2,500</span>
+                    <span class="price">From $400</span>
                 </a>
 
                 <a href="service-agentic-office.html" class="mini-service popular reveal" style="text-decoration: none; color: inherit;">
@@ -4206,7 +4206,7 @@
                 </details>
                 <details class="reveal" style="background: var(--bg-card); border: 1px solid var(--border); border-radius: 12px; padding: 1.5rem; cursor: pointer;">
                     <summary style="font-weight: 600; font-size: 1.05rem; color: var(--text); list-style: none; display: flex; justify-content: space-between; align-items: center;">How much does AI integration cost for a small business? <span style="color: var(--accent); font-size: 1.2rem;">+</span></summary>
-                    <p style="color: var(--text-muted); margin-top: 1rem; line-height: 1.7;">Our discovery call is free. Simple AI assistants start at $400. Custom enterprise deployments from $2,500. Managed service starts at $99/month with usage caps so costs stay predictable.</p>
+                    <p style="color: var(--text-muted); margin-top: 1rem; line-height: 1.7;">Our discovery call is free. AI agents start at $400. Managed service starts at $99/month with usage caps so costs stay predictable.</p>
                 </details>
                 <details class="reveal" style="background: var(--bg-card); border: 1px solid var(--border); border-radius: 12px; padding: 1.5rem; cursor: pointer;">
                     <summary style="font-weight: 600; font-size: 1.05rem; color: var(--text); list-style: none; display: flex; justify-content: space-between; align-items: center;">Is my data safe with local AI models? <span style="color: var(--accent); font-size: 1.2rem;">+</span></summary>
