--- a/index.html
+++ b/index.html
@@ -3850,10 +3850,11 @@
     <!-- Mobile Menu Overlay -->
     <div class="mobile-menu" id="mobileMenu" role="dialog" aria-modal="true" aria-label="Navigation menu" aria-hidden="true">
         <a href="#services" data-mobile-link>Services</a>
+        <a href="/law-firms" data-mobile-link>⚖️ Law Firms</a>
+        <a href="/providence-law-firms-ai" data-mobile-link>📍 Providence Lawyers</a>
         <a href="products.html" data-mobile-link>Products</a>
         <a href="ri-report" data-mobile-link>RI Real Estate</a>
         <a href="realtors-ai" data-mobile-link>Realtors AI</a>
-        <a href="wedding-app" data-mobile-link>Wedding AI</a>
         <a href="#demo" data-mobile-link>AI Demo</a>
         <a href="blog.html" data-mobile-link>Blog</a>
         <a href="#contact" data-mobile-link>Contact Us</a>
@@ -3864,7 +3865,16 @@
         <div class="nav-container">
             <a href="#hero" class="logo" aria-label="AIBridges - Back to top">AIBridges</a>
             <ul class="nav-links" role="menubar">
-                <li><a href="#services" data-nav>Services</a></li>
+                <li class="nav-dropdown">
+                    <a href="#services" data-nav>Services</a>
+                    <div class="dropdown-menu">
+                        <a href="/law-firms">⚖️ Law Firms</a>
+                        <a href="/providence-law-firms-ai">📍 Providence Lawyers</a>
+                        <a href="/realtors-ai">🏠 Realtors AI</a>
+                        <a href="/ai-consulting">🤖 AI Consulting</a>
+                        <a href="/it-support">💻 IT Support</a>
+                    </div>
+                </li>
                 <li class="nav-dropdown">
                     <a href="products.html" data-nav>Products</a>
                     <div class="dropdown-menu">
