SEO improvements: target 'youtube trends dashboard' and 'ai consulting providence ri'

--- a/ai-consulting.html
+++ b/ai-consulting.html
@@ -9,8 +9,17 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Consulting Services Rhode Island | AIBridges</title>
-    <meta name="description" content="Expert AI consulting for Rhode Island businesses. Cut through the hype and implement AI solutions that deliver real ROI. Free strategy session.">
+    <title>AI Consulting Providence RI | Expert AI Strategy for Rhode Island Businesses | AIBridges</title>
+    <meta name="description" content="AI consulting in Providence, Rhode Island. Expert AI strategy, implementation, and automation for local businesses. Based in Cranston, serving all of RI. Free strategy session.">
+    <meta name="keywords" content="ai consulting providence ri, ai consulting rhode island, ai strategy providence, artificial intelligence consulting ri, ai implementation rhode island, ai for small business providence, machine learning consulting ri">
+    <meta name="geo.region" content="US-RI">
+    <meta name="geo.placename" content="Providence, Rhode Island">
+    
+    <!-- Open Graph -->
+    <meta property="og:title" content="AI Consulting Providence RI | AIBridges">
+    <meta property="og:description" content="Expert AI consulting for Providence and Rhode Island businesses. Practical AI solutions that deliver real ROI.">
+    <meta property="og:url" content="https://aibridges.org/ai-consulting">
+    <meta property="og:type" content="website">
     <link rel="canonical" href="https://aibridges.org/ai-consulting">
     <link rel="stylesheet" href="css/style.css">
     
