--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Solutions for Small Business | AIBridges — Cranston, RI</title>
-    <meta name="description" content="AI solutions for Rhode Island businesses — custom integrations, automation, private AI deployment, and IT support. Free strategy call. Based in Cranston, RI.">
+    <meta name="description" content="AI consulting in Providence RI — custom AI agents, automation, private AI deployment, and IT support for Rhode Island businesses. Based in Cranston. Free strategy call.">
+    <meta name="keywords" content="ai consulting providence ri, ai solutions rhode island, ai for small business, it support rhode island, ai automation cranston, youtube trends dashboard, ai agents providence">
     <meta name="keywords" content="AI solutions for business Rhode Island, AI consulting Cranston RI, law firm AI tools, private AI deployment, local AI models, business automation Rhode Island, IT support Cranston RI, AI document processing law firm">
     <meta name="robots" content="index, follow">
 
