SEO: Add local tech support, realtor AI tools keywords + FAQ schema

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Solutions for Small Business | AIBridges — Cranston, RI</title>
     <meta name="description" content="AI consulting in Providence RI — custom AI agents, automation, private AI deployment, and IT support for Rhode Island businesses. Based in Cranston. Free strategy call.">
-    <meta name="keywords" content="ai consulting providence ri, ai solutions rhode island, ai for small business, it support rhode island, ai automation cranston, youtube trends dashboard, ai agents providence">
+    <meta name="keywords" content="ai consulting providence ri, local tech support providence, realtor ai tools, realtor tools providence, ai solutions rhode island, it support rhode island, ai automation cranston, youtube trends dashboard, ai agents providence, computer repair providence ri, real estate ai rhode island">
     <meta name="keywords" content="AI solutions for business Rhode Island, AI consulting Cranston RI, law firm AI tools, private AI deployment, local AI models, business automation Rhode Island, IT support Cranston RI, AI document processing law firm">
     <meta name="robots" content="index, follow">
 
