--- a/realtors-ai.html
+++ b/realtors-ai.html
@@ -3,8 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Assistant for Rhode Island Realtors | AIBridges</title>
-    <meta name="description" content="Claude-powered AI assistant for RI realtors. Automated texts, showing scheduling, and 36K+ property knowledge. $400 setup, ~$99/mo.">
+    <title>Realtor AI Tools Providence RI | AI Assistant for Rhode Island Realtors | AIBridges</title>
+    <meta name="description" content="Realtor AI tools for Providence and Rhode Island agents. AI-powered lead response, showing scheduler, and property knowledge base with 36K+ RI listings. $300 setup, $99/mo.">
+    <meta name="keywords" content="realtor ai tools, realtor tools providence, ai for realtors rhode island, real estate ai assistant, realtor chatbot providence ri, ai lead generation realtors, real estate automation tools, realtor ai providence, mls ai tools ri, real estate tech providence">
+    <meta name="geo.region" content="US-RI">
+    <meta name="geo.placename" content="Providence, Rhode Island">
+    <link rel="canonical" href="https://aibridges.org/realtors-ai">
+    
+    <!-- Open Graph -->
+    <meta property="og:title" content="Realtor AI Tools Providence RI | AI for Rhode Island Realtors">
+    <meta property="og:description" content="AI-powered tools for Providence realtors. Automated lead response, showing scheduler, 36K+ property knowledge base.">
+    <meta property="og:url" content="https://aibridges.org/realtors-ai">
+    <meta property="og:type" content="website">
+    
+    <!-- Schema.org SoftwareApplication -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "AIBridges Realtor AI Assistant",
+        "description": "AI-powered assistant for Rhode Island realtors featuring automated lead response, showing scheduling, and local property knowledge.",
+        "url": "https://aibridges.org/realtors-ai",
+        "applicationCategory": "BusinessApplication",
+        "operatingSystem": "Web Browser",
+        "offers": {
+            "@type": "Offer",
+            "price": "99",
+            "priceCurrency": "USD",
+            "priceValidUntil": "2027-12-31"
+        },
+        "provider": {
+            "@type": "LocalBusiness",
+            "name": "AIBridges",
+            "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "Cranston",
+                "addressRegion": "RI",
+                "addressCountry": "US"
+            }
+        },
+        "areaServed": {
+            "@type": "State",
+            "name": "Rhode Island"
+        }
+    }
+    </script>
     <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
