Rename petros URLs to kephas

--- a/kephas.html
+++ b/kephas.html
@@ -10,14 +10,14 @@
     <meta name="apple-itunes-app" content="app-id=XXXXXXXXX">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://aibridges.org/petros">
+    <meta property="og:url" content="https://aibridges.org/kephas">
     <meta property="og:title" content="Kephas — Catholic App for Kids">
     <meta property="og:description" content="Daily prayers, Bible games, and saint stories for Catholic families.">
     <meta property="og:image" content="https://aibridges.org/kephas-og.png">
     <meta name="twitter:card" content="summary_large_image">
 
     <meta name="theme-color" content="#1a1a2e">
-    <link rel="canonical" href="https://aibridges.org/petros">
+    <link rel="canonical" href="https://aibridges.org/kephas">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -309,8 +309,8 @@
     
     <footer>
         <p>
-            <a href="/petros-privacy">Privacy Policy</a>
-            <a href="/petros-support">Support</a>
+            <a href="/kephas-privacy">Privacy Policy</a>
+            <a href="/kephas-support">Support</a>
             <a href="/">AIBridges</a>
         </p>
         <p style="margin-top: 16px;">© 2026 AIBridges LLC. Made with ❤️ in Rhode Island.</p>
