Add og:image to realtors-ai page

--- a/realtors-ai.html
+++ b/realtors-ai.html
@@ -15,6 +15,9 @@
     <meta property="og:description" content="AI-powered tools for Providence realtors. Automated lead response, showing scheduler, 36K+ property knowledge base.">
     <meta property="og:url" content="https://aibridges.org/realtors-ai">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://aibridges.org/og-image.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://aibridges.org/og-image.png">
     
     <!-- Schema.org SoftwareApplication -->
     <script type="application/ld+json">
