Change 'Faith Made Fun' to 'Great for Catholic Learning'

--- a/kephas.html
+++ b/kephas.html
@@ -269,7 +269,7 @@
         </section>
         
         <section class="features">
-            <h2>Faith Made Fun</h2>
+            <h2>Great for Catholic Learning</h2>
             <div class="feature-grid">
                 <div class="feature-card">
                     <i class="fas fa-pray"></i>
