--- a/kephas.html
+++ b/kephas.html
@@ -235,7 +235,20 @@
         }
         
         @media (max-width: 768px) {
-            .screenshots img { width: 180px; }
+            .screenshots {
+                display: flex;
+                gap: 12px;
+                padding: 20px 16px;
+                overflow-x: auto;
+                -webkit-overflow-scrolling: touch;
+                scroll-snap-type: x mandatory;
+            }
+            .screenshots img {
+                width: 160px;
+                min-width: 160px;
+                flex-shrink: 0;
+                scroll-snap-align: center;
+            }
             .hero { padding: 60px 0 40px; }
         }
     </style>
