Fix mobile screenshots - resize to 400x866 for faster loading

--- a/kephas.html
+++ b/kephas.html
@@ -271,9 +271,9 @@
         </section>
         
         <section class="screenshots">
-            <img src="/kephas-screenshot-1.jpg" alt="Peaceful meditation screen">
-            <img src="/kephas-screenshot-2.jpg" alt="Tower of Babel game">
-            <img src="/kephas-screenshot-3.jpg" alt="David and Goliath game">
+            <img src="/kephas-screenshot-1.jpg" alt="Peaceful meditation screen" width="160" height="346" loading="eager">
+            <img src="/kephas-screenshot-2.jpg" alt="Tower of Babel game" width="160" height="346" loading="eager">
+            <img src="/kephas-screenshot-3.jpg" alt="David and Goliath game" width="160" height="346" loading="eager">
         </section>
         
         <section class="verse">
