Fix Deal Map to show only FOR SALE properties
- Regenerated deal map with active MLS listings only (not sold)
- 30 for-sale deals with 15-55% below market pricing
- Updated scoring: compares to city median $/sqft
- Updated legend and descriptions to reflect for-sale only
- Added 'FOR SALE' badge on popups

--- a/ri-report.html
+++ b/ri-report.html
@@ -783,10 +783,10 @@
  <h2>🗺️ Deal Map</h2>
  <div class="chart-card full" style="background:linear-gradient(135deg, rgba(34,197,94,0.08), rgba(16,185,129,0.05));border:1px solid rgba(34,197,94,0.25)">
  <div class="chart-title" style="font-size:1.1rem;color:#e2e8f0">📍 Top Deals Across Rhode Island</div>
- <p style="color:#22c55e;font-size:0.85rem;margin-bottom:0.75rem">Machine learning scored 30K properties. <strong>Click markers</strong> for details. Green = best deals (90+), yellow = great (80+).</p>
+ <p style="color:#22c55e;font-size:0.85rem;margin-bottom:0.75rem"><strong>Active FOR SALE listings only.</strong> Click markers for details. Green = 40%+ below market, yellow = 30%+.</p>
  <iframe src="ri-deal-map.html" style="width:100%;height:500px;border:none;border-radius:10px"></iframe>
  <div style="background:rgba(0,0,0,0.2);padding:0.75rem 1rem;border-radius:6px;margin-top:0.75rem;font-size:0.8rem;color:#94a3b8">
- <strong style="color:#22c55e">🎯 Deal Score:</strong> Compares actual price vs predicted price using a Random Forest model (R²=0.72). Score of 90+ means property sold for ~90% below predicted value. <em>Note: Some are foreclosures, estate sales, or data anomalies - always verify.</em>
+ <strong style="color:#22c55e">🎯 Deal Score:</strong> Compares asking price vs city median $/sqft for similar homes. A score of 40% means priced 40% below typical market value. <em>Note: May include fixer-uppers or estate sales - always verify condition.</em>
  </div>
  </div>
 
