Remove /law-firms nav link, keep Providence Lawyers only

--- a/index.html
+++ b/index.html
@@ -3851,8 +3851,7 @@
     <!-- Mobile Menu Overlay -->
     <div class="mobile-menu" id="mobileMenu" role="dialog" aria-modal="true" aria-label="Navigation menu" aria-hidden="true">
         <a href="#services" data-mobile-link>Services</a>
-        <a href="/law-firms" data-mobile-link>⚖️ Law Firms</a>
-        <a href="/providence-law-firms-ai" data-mobile-link>📍 Providence Lawyers</a>
+        <a href="/providence-law-firms-ai" data-mobile-link>⚖️ Providence Lawyers</a>
         <a href="products.html" data-mobile-link>Products</a>
         <a href="ri-report" data-mobile-link>RI Real Estate</a>
         <a href="realtors-ai" data-mobile-link>Realtors AI</a>
@@ -3869,8 +3868,7 @@
                 <li class="nav-dropdown">
                     <a href="#services" data-nav>Services</a>
                     <div class="dropdown-menu">
-                        <a href="/law-firms">⚖️ Law Firms</a>
-                        <a href="/providence-law-firms-ai">📍 Providence Lawyers</a>
+                        <a href="/providence-law-firms-ai">⚖️ Providence Lawyers</a>
                         <a href="/realtors-ai">🏠 Realtors AI</a>
                         <a href="/ai-consulting">🤖 AI Consulting</a>
                         <a href="/it-support">💻 IT Support</a>
