Add CSS Tricks link to Tools nav dropdown

--- a/index.html
+++ b/index.html
@@ -3892,6 +3892,7 @@
                         <a href="/realtors-ai">🤖 Realtors AI</a>
                         <a href="/youtube-trends">📊 YouTube Trends</a>
                         <a href="/kb.html">📚 Knowledge Base</a>
+                        <a href="/css-tricks.html">🎨 CSS Tricks</a>
                     </div>
                 </li>
                 <li class="nav-dropdown">
