Add rotating border effect to services card container

--- a/index.html
+++ b/index.html
@@ -3989,6 +3989,28 @@
 
     <!-- REDESIGNED SECTIONS - Anti-homogenization approach -->
     <style>
+        /* Rotating border effect */
+        .rotating-border-container {
+            position: relative;
+            border-radius: 16px;
+            overflow: hidden;
+        }
+        .rotating-border-container::before {
+            content: '';
+            position: absolute;
+            inset: -150%;
+            background: conic-gradient(from 0deg, transparent 0%, rgba(99, 102, 241, 0.8) 10%, transparent 20%);
+            animation: borderRotate 4s linear infinite;
+            z-index: 0;
+        }
+        .rotating-border-container > * {
+            position: relative;
+            z-index: 1;
+        }
+        @keyframes borderRotate {
+            to { transform: rotate(360deg); }
+        }
+        
         /* Mobile responsive overrides for redesigned sections */
         @media (max-width: 768px) {
             .services-grid-desktop { 
@@ -4058,7 +4080,7 @@
                 </div>
                 
                 <!-- Right: Stacked services (not a grid) -->
-                <div style="display: flex; flex-direction: column; gap: 1px; background: var(--border); border-radius: 16px; overflow: hidden;">
+                <div class="rotating-border-container" style="display: flex; flex-direction: column; gap: 1px; background: var(--border); border-radius: 16px;">
                     <a href="service-agent-discovery.html" class="service-row" style="background: var(--bg-card); padding: 2.5rem; text-decoration: none; color: inherit; display: grid; grid-template-columns: auto 1fr auto; gap: 2rem; align-items: center; transition: background 0.3s;" onmouseover="this.style.background='rgba(76,105,245,0.08)'" onmouseout="this.style.background='var(--bg-card)'">
                         <div style="font-size: 2rem;">🎯</div>
                         <div>
